--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         
         <div class="content">
-            <h1>Mermelada Games</h1>
+            <h1>MERMELADA GAMES</h1>
             <h2></h2>
             <a><i class="ri-arrow-down-double-line"></i></a>
         </div>
