--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 
 <body>
     <header>
-        <div class="name">Mermelada Games</div>
+        <div class="name">
+            <img src="mermeghost.png">
+            MERMELADA GAMES
+        </div>
         <div class="nav-links">
             <a href="#home">Home</a>
             <a href="#biography">About</a>
