--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
     </section>
 
     <section class="projects">
+        <h1>Our Projects</h1>
       <div class="flexing">
-        <img src="mind.jpg" alt="">
+        <video src="mind.mp4" autoplay controls muted></video>
         <div class="flex">
         <h2>Mind's Abyss</h2>
         <p>A captivating 3D cooperative platformer adventure developed for the 7th Gran CITM Game Jam, where players dive into the
@@ -59,16 +60,16 @@
       <div class="flexing">
         <div class="flex2">
         <h2>Stelar</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure perspiciatis quos earum porro, non animi asperiores quidem voluptatibus consectetur doloremque.</p>
+        <p>A serene journey of logic and creativity under stars. In this tranquil 2D puzzle game, dive in the cosmic landscapes as you craft constellations with soothing melodies. With no time pressure, immerse yourself in the wonders of the universe at your own pace. Winner of the esteemed "Premi Ajuntament Terrassa" award.</p>
       </div>
-         <img src="https://source.unsplash.com/random" alt="">
+      <video src="mind.mp4" autoplay controls muted></video>
       </div>
       
       <div class="flexing">
-        <img src="https://source.unsplash.com/random" alt="">
+        <video src="mind.mp4" autoplay controls muted></video>
         <div class="flex">
         <h2>Dit Déu</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure perspiciatis quos earum porro, non animi asperiores quidem voluptatibus consectetur doloremque.</p>
+        <p>Step into the divine shoes of the mighty Greek god, Zeus, in this 2D strategy game. Command a mythical army with a tap of your finger and unleash your divine powers to repel enemy hordes. Create your troops, strategically position them, and harness powerful spells to defend Athena in this epic strategic battle. Winner of the "Best Game" award.</p>
       </div>
       </div>
     </section>
