--- a/index.html
+++ b/index.html
@@ -40,6 +40,97 @@
             Join us as we continue to push the boundaries of game development and bring our creative visions to life.</p>
     </section>
 
+    <section id="team" class="team">
+		<h2>TEAM MEMBERS</h2>
+		<div class="container">
+			<!-- Miguel Iglesias Abarca -->
+			<div class="card">
+				<div class="content">
+			  		<div class="imgBx">
+						<img src="img/miguel_iglesias.jpg" />
+			  		</div>
+					<div class="contentBx">
+						<h3>Miguel Iglesias<br /><span>Game Designer</span></h3>
+					</div>
+				</div>
+				<ul class="sci">
+					<li>
+						<a href="https://github.com/MiguelIglesiasAbarca"><i class="ri-github-fill"></i></a>
+						<a href="https://linkedin.com/in/miguel-iglesias-abarca"><i class="ri-linkedin-box-fill"></i></a>
+					</li>
+				</ul>	
+		  	</div>
+			<!-- Guillem Alqueza Mayench -->
+		  	<div class="card">
+				<div class="content">
+			  		<div class="imgBx">
+						<img src="img/guillem_alqueza.jpg" />
+			  		</div>
+					<div class="contentBx">
+						<h3>Guillem Alqueza<br /><span>Programmer</span></h3>
+					</div>
+				</div>
+				<ul class="sci">
+					<li>
+						<a href="https://github.com/guillemalqueza"><i class="ri-github-fill"></i></a>
+						<a href="https://linkedin.com/in/guillemalqueza"><i class="ri-linkedin-box-fill"></i></a>
+					</li>
+				</ul>
+			</div>
+			<!-- Lluc Cid i Bernal -->
+			<div class="card">
+				<div class="content">
+			  		<div class="imgBx">
+						<img src="img/lluc.png" />
+			  		</div>
+					<div class="contentBx">
+						<h3>Lluc Cid<br /><span>Game Designer</span></h3>
+					</div>
+				</div>
+				<ul class="sci">
+					<li>
+						<a href="https://github.com/Lluccib"><i class="ri-github-fill"></i></a>
+						<a href="https://linkedin.com/in/lluc-cid-i-bernal-193843251"><i class="ri-linkedin-box-fill"></i></a>
+					</li>
+				</ul>
+			</div>
+			<!-- Carlos González Subirón -->
+			<div class="card">
+				<div class="content">
+			  		<div class="imgBx">
+						<img src="img/carlos.jpg" />
+			  		</div>
+					<div class="contentBx">
+						<h3>Carlos González<br /><span>Technical Artist</span></h3>
+					</div>
+				</div>
+				<ul class="sci">
+					<li>
+						<a href="https://github.com/gosu00"><i class="ri-github-fill"></i></a>
+						<a href="https://linkedin.com/in/carlos-gonzález-subirón-45ab7722a"><i class="ri-linkedin-box-fill"></i></a>
+					</li>
+				</ul>
+			</div>
+			<!-- Sergio Fernández Contreras -->
+			<div class="card">
+				<div class="content">
+			  		<div class="imgBx">
+						<img src="img/sergio.jpg" />
+			  		</div>
+					<div class="contentBx">
+						<h3>Sergio Fernández<br /><span>Programmer</span></h3>
+					</div>
+				</div>
+				<ul class="sci">
+					<li>
+						<a href="https://github.com/Serfercont"><i class="ri-github-fill"></i></a>
+						<a href="https://linkedin.com/in/sergio-fernández-contreras-5a57a0233"><i class="ri-linkedin-box-fill"></i></a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</section>
+
     <section class="projects">
         <h1>OUR PROJECTS</h1>
       <div class="flexing">
