--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
 	<meta name="google-site-verification" content="aEOla5PLldNjtTbnxQP3s-98tGSlSBqDHWd-w3hsWUQ" />
+	<title>Mermelada Games</title>
+	<link rel="icon" href="mermeghost.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Coiny&display=swap" rel="stylesheet">
