--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
       <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
     <aside class="aside-icons">
-        <a href="https://github.com/"><i class="ri-github-fill"></i></a>
-        <a href="https://www.linkedin.com/in//"><i class="ri-linkedin-box-fill"></i></a>
+        <a href="https://www.youtube.com/@MermeladaGames"><i class="ri-youtube-fill"></i></a>
+        <a href="https://www.linkedin.com/in/mermeladagames/"><i class="ri-linkedin-box-fill"></i></a>
     </aside>
 
     <footer>
