--- a/index.html
+++ b/index.html
@@ -169,12 +169,12 @@
 
     <aside class="aside-icons">
         <a href="https://www.youtube.com/@MermeladaGames"><i class="ri-youtube-fill"></i></a>
-        <a href="https://www.linkedin.com/in/mermeladagames/"><i class="ri-linkedin-box-fill"></i></a>
+        <a href="https://www.linkedin.com/company/mermeladagames/"><i class="ri-linkedin-box-fill"></i></a>
     </aside>
 
     <footer>
         <p>© 2024 Mermelada Games</p>
-        <p>mermeladagames@gmail.com</p>
+        <p>gamesmermelada@gmail.com</p>
     </footer>
 
     <div id="previewModal" class="modal">
